test/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: go-webhook
  namespace: default
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIakNDQWdhZ0F3SUJBZ0lUR3VXYUpSc1VxczMyM2E2Ymh2YncweDhXblRBTkJna3Foa2lHOXcwQkFRc0YKQURBVU1SSXdFQVlEVlFRRERBbHNiMk5oYkdodmMzUXdIaGNOTWpFd09URTBNakF3TVRFMFdoY05NekV3T1RFeQpNakF3TVRFMFdqQVVNUkl3RUFZRFZRUUREQWxzYjJOaGJHaHZjM1F3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUMwZGhmOTZUZ0xpWFM1Z1F5YlFOSVV5N2VoT3dNQUxWaG1XV21yRllvK05PZ0IKdU5ldlZzOHVPa0RuUEZ6YnVwaGY5bWZvZEZvQU9VRVQvM213WE52WDdFb2lFRE5pWDBiNTBKSFJDNlUvb2VhTApYTXl6TjZhVGhjWX [...]
    url: https://localhost:8443/mutate
  sideEffects: None
  admissionReviewVersions: ["v1"]
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values: ["kube-system"]
  failurePolicy: Ignore
  timeoutSeconds: 3
  name: go-webhook.default.svc.cluster.local
  rules:
  - apiGroups: ["*"]
    apiVersions: ["*"]
    operations:
    - CREATE
    - UPDATE
    resources:
    - configmaps
